[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Color_MainPanel.gd" type="Script" id=1]
[ext_resource path="res://scripts/Login.gd" type="Script" id=2]
[ext_resource path="res://scene/ButtonExit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/PanelContainer.gd" type="Script" id=4]
[ext_resource path="res://scene/Menu_Login.tscn" type="PackedScene" id=5]

[node name="Login" type="Node2D"]
script = ExtResource( 2 )

[node name="TimerConn" type="Timer" parent="."]
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="MainPanel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
theme_type_variation = "panel"
script = ExtResource( 1 )

[node name="PanelMenu" parent="PanelContainer/MainPanel" instance=ExtResource( 5 )]
anchor_right = 0.999
anchor_bottom = 0.056
margin_left = 1.0
margin_top = 1.0
margin_right = 0.00994873
margin_bottom = 0.183998

[node name="ButtonExit" parent="PanelContainer/MainPanel" instance=ExtResource( 3 )]

[node name="Inputs" type="Panel" parent="PanelContainer/MainPanel"]
anchor_left = 0.001
anchor_top = 0.056
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -0.00999999
margin_top = 0.183998
margin_bottom = -6.0

[node name="Username" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.044
anchor_right = 0.984
anchor_bottom = 0.117
margin_left = -0.0640001
margin_top = -0.0680027
margin_right = 0.0639954
margin_bottom = 0.000995636

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Username"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Username :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/Username"]
anchor_left = 0.295
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 0.0399933
rect_pivot_offset = Vector2( 350, 103 )

[node name="Password" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.132
anchor_right = 0.984
anchor_bottom = 0.205
margin_left = -0.0640001
margin_top = -0.204002
margin_right = 0.0639954
margin_bottom = -0.13501

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Password"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Password :"
align = 1
valign = 1

[node name="Input" type="LineEdit" parent="PanelContainer/MainPanel/Inputs/Password"]
anchor_left = 0.295
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 0.0399933
rect_pivot_offset = Vector2( 350, 103 )
secret = true

[node name="Server" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.219
anchor_right = 0.984
anchor_bottom = 0.293
margin_left = -0.0640001
margin_top = 0.206993
margin_right = 0.0639954
margin_bottom = -0.271011

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Server"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Server :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/Server"]
anchor_left = 0.295
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 0.0399933
rect_pivot_offset = Vector2( 350, 103 )

[node name="DatabaseName" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.307
anchor_right = 0.984
anchor_bottom = 0.38
margin_left = -0.0640001
margin_top = 0.0709991
margin_right = 0.0639954
margin_bottom = 0.139984

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/DatabaseName"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
text = "Database name :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/DatabaseName"]
anchor_left = 0.295
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 0.0399933

[node name="Port" type="Panel" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.016
anchor_top = 0.395
anchor_right = 0.984
anchor_bottom = 0.468
margin_left = -0.0640001
margin_top = -0.0650024
margin_right = 0.0639954
margin_bottom = 0.00398254

[node name="Label" type="Label" parent="PanelContainer/MainPanel/Inputs/Port"]
anchor_top = 0.2
anchor_right = 0.262
anchor_bottom = 0.8
margin_right = 0.14399
rect_pivot_offset = Vector2( 56, 64 )
text = "Port :"
align = 1
valign = 1

[node name="Input" type="TextEdit" parent="PanelContainer/MainPanel/Inputs/Port"]
anchor_left = 0.295
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 0.0399933

[node name="Button" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.365
anchor_top = 0.57
anchor_right = 0.667
anchor_bottom = 0.629
margin_left = 0.0399933
margin_top = 0.209961
margin_right = -0.16803
margin_bottom = -0.0630188
rect_min_size = Vector2( 150, 30 )
rect_clip_content = true
mouse_default_cursor_shape = 2
text = "Connexion"

[node name="Label2" type="Label" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.048
anchor_top = 0.79
anchor_right = 0.524
anchor_bottom = 0.834
margin_left = -0.191999
margin_top = -0.130005
margin_right = -0.0960388
margin_bottom = -0.19809
rect_pivot_offset = Vector2( 56, 64 )
text = "Connexion rapide  :"
align = 1
valign = 1

[node name="ButtonTry" type="Button" parent="PanelContainer/MainPanel/Inputs"]
anchor_left = 0.175
anchor_top = 0.863
anchor_right = 0.476
anchor_bottom = 0.921
margin_left = -0.200005
margin_top = -0.0609741
margin_right = 0.0959625
margin_bottom = 0.213013
rect_min_size = Vector2( 150, 30 )
rect_clip_content = true
mouse_default_cursor_shape = 2
text = "Connexion"

[node name="Error" type="Label" parent="PanelContainer/MainPanel/Inputs"]
visible = false
anchor_left = 0.429
anchor_top = 0.687
anchor_right = 1.0
anchor_bottom = 0.761
margin_left = -0.216003
margin_top = 0.210968
margin_bottom = -0.267029
text = "Erreur arguments de connexion invalide.
Ou alors service Postgres désactivé."
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MainPanel"]
anchor_left = 0.532
anchor_top = 0.097
anchor_right = 0.888
anchor_bottom = 0.657
margin_left = -0.320007
margin_top = 0.157997
margin_right = 0.119934
margin_bottom = -0.00201416
drag_to_rearrange_enabled = true

[node name="TabHistorique" type="Tabs" parent="PanelContainer/MainPanel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
drag_to_rearrange_enabled = true

[node name="Historic" type="Panel" parent="PanelContainer/MainPanel/TabContainer/TabHistorique"]
anchor_left = 0.009
anchor_right = 0.991
anchor_bottom = 0.992
margin_left = 0.832
margin_right = 0.167969
margin_bottom = -1.664

[node name="ScrollHistoric" type="ScrollContainer" parent="PanelContainer/MainPanel/TabContainer/TabHistorique/Historic"]
anchor_left = 0.023
anchor_top = 0.028
anchor_right = 0.973
anchor_bottom = 0.995
margin_left = 0.0548792
margin_top = -0.105216
margin_right = -0.113129
margin_bottom = -0.0246582

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MainPanel/TabContainer/TabHistorique/Historic/ScrollHistoric"]

[node name="Tabs" type="Tabs" parent="PanelContainer/MainPanel/TabContainer"]
visible = false
margin_right = 40.0
margin_bottom = 24.0
drag_to_rearrange_enabled = true

[node name="LabelInfoConn" type="Label" parent="PanelContainer/MainPanel"]
visible = false
margin_left = 329.0
margin_top = 489.0
margin_right = 505.0
margin_bottom = 571.0
text = "BDD : postgres
User : postgres
PWD : postgres
Server : 127.0.0.1
Port : 5432"

[connection signal="pressed" from="PanelContainer/MainPanel/Inputs/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MainPanel/Inputs/ButtonTry" to="." method="_on_ButtonTry_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MainPanel/Inputs/ButtonTry" to="." method="_on_ButtonTry_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MainPanel/Inputs/ButtonTry" to="." method="_on_ButtonTry_pressed"]
[connection signal="tab_selected" from="PanelContainer/MainPanel/TabContainer" to="." method="_on_TabContainer_tab_selected"]
